# bond-master-scraper

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py
app/anbima_parametros_ettj/: README.md  config.py  scraper.py
app/anbima_vna/: README.md  config.py  scraper.py
app/bcb_selic/: README.md  config.py  scraper.py  utils.py
app/bcb_titulos_publicos/: README.md  config.py  scraper.py  utils.py
app/db/: session.py
app/db/models/: anbima_parametros_ettj.py  anbima_vna.py  bcb_selic.py  bcb_titulos_publicos.py
app/utils/dates/: __init__.py  brazil_calendar.py  config.py
